--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -70,3 +70,26 @@ nav button:hover {
     max-width: 550px;
     opacity: 0.9;
 }
+
+/*  menu styling */
+.menu-item {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.menu-text h2 {
+    font-size: 1.8rem;
+}
+
+.menu-text p {
+    font-size: 1.1rem;
+}
+
+.menu-img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+}
